Pridetas pataisytas CSS4 namu darbas

--- a/CSS4/index.html
+++ b/CSS4/index.html
@@ -10,9 +10,9 @@
         <link href="css/styles.css" rel="stylesheet">
     </head>
     <body>
-        <img src="https://github.com/zigmantasvcs/resources/blob/master/page%20task/logo.gif?raw=true">
-        <hr style="width: 600px" size="2" noshade>
-        <div>
+        <div id="header"><img src="https://github.com/zigmantasvcs/resources/blob/master/page%20task/logo.gif?raw=true" alt="logo"></div>
+        <hr id="first-hr">
+        <div id="nav">
             <ul>
                 <li><a>PAGRINDINIS</a></li>
                 <li><a>PARDAVIMAS</a></li>
@@ -21,8 +21,8 @@
                 <li><a>KONTAKTAI</a></li>
             </ul>
         </div>
-        <hr style="width: 600px" size="1" noshade>
-        <img src="https://github.com/zigmantasvcs/resources/blob/master/page%20task/keys.jpg?raw=true" class="responsive">
-        <div>Mes specializuojamės klasikinių klaviatūrų, ypač "Fender Rhodes", Wurlitzer EP200 ir Hohner Clavinet, pardavmu ir taisymu.</div>
+        <hr id="second-hr">
+        <img src="https://github.com/zigmantasvcs/resources/blob/master/page%20task/keys.jpg?raw=true" class="responsive" alt="pianino-klaviatūra">
+        <p>Mes specializuojamės klasikinių klaviatūrų, ypač "Fender Rhodes", Wurlitzer EP200 ir Hohner Clavinet, pardavmu ir taisymu.</p>
     </body>
 </html>
