Pataisytas HTML11 namu darbas

--- a/HTML11/vaziuojancios/dvirates/index.html
+++ b/HTML11/vaziuojancios/dvirates/index.html
@@ -10,18 +10,21 @@
     <body>
         <h1>Transporto priemonių katalogas</h1>
             <ul>
-                <li><a href="index.html">Pagrindinis</a></li>
-                <li><a href="plaukiancios/index.html">Plaukiančios</a></li>
-                <li><a href="skraidancios/index.html">Skraidančios</a></li>
-                <li><a href="vaziuojancios/index.html">Važiuojančios</a>
+                <li><a href="../../index.html">Pagrindinis</a></li>
+                <li><a href="../../plaukiancios/index.html">Plaukiančios</a></li>
+                <li><a href="../../skraidancios/index.html">Skraidančios</a></li>
+                <li><a href="../index.html">Važiuojančios</a>
                     <ul type="circle">
-                        <li><a href="vaziuojancios/dvirates/index.html">Dviratės</a></li>
-                        <li><a href="vaziuojancios/keturates/index.html">Keturatės</a></li>
+                        <li><a href="index.html">Dviratės</a></li>
+                        <li><a href="../keturates/index.html">Keturatės</a></li>
                     </ul>
                 </li>
-                <li><a href="about.html">Apie</a></li>
-             </ul>
-        <h2>Apie svetainę</h2>
-        <h3>Svetainės paskirtis yra sukataloguoti visas egzistuojančias transporto priemones.</h3>
+                <li><a href="../../about.html">Apie</a></li>
+            </ul>
+        <h2>Dviratės transporto priemonės</h2>
+            <ul>
+                <li>Motociklas</li>
+                <li>Dviratis</li>
+            </ul>
     </body>
 </html>
