--- a/HTML11/index.html
+++ b/HTML11/index.html
@@ -11,12 +11,12 @@
         <h1>Transporto priemonių katalogas</h1>
             <ul>
                 <li><a href="index.html">Pagrindinis</a></li>
-                <li><a href="plaukiancios.html">Plaukiančios</a></li>
-                <li><a href="skraidancios.html">Skraidančios</a></li>
-                <li><a href="vaziuojancios.html">Važiuojančios</a>
+                <li><a href="plaukiancios/index.html">Plaukiančios</a></li>
+                <li><a href="skraidancios/index.html">Skraidančios</a></li>
+                <li><a href="vaziuojancios/index.html">Važiuojančios</a>
                     <ul type="circle">
-                        <li><a href="dvirates.html">Dviratės</a></li>
-                        <li><a href="keturates.html">Keturatės</a></li>
+                        <li><a href="vaziuojancios/dvirates/index.html">Dviratės</a></li>
+                        <li><a href="vaziuojancios/keturates/index.html">Keturatės</a></li>
                     </ul>
                 </li>
                 <li><a href="about.html">Apie</a></li>
